--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <title>SPA</title>
 </head>
 <body>
     <div id="root"></div>
-    <script src="./src/index.js" type="module"></script>
+    <script src="./src/index.jsx" type="module"></script>
 </body>
 </html>
